--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -311,8 +311,12 @@
                     <a href="https://youtu.be/bjr1PsH3a5I"
                        class="footer-link d-inline-block py-2"
                        target="_blank"
-                       rel="noopener noreferrer nofollow"><i class="bi bi-youtube align-middle"
-                           style="font-size: 1.5rem;"></i><span i18n> How to - Fragebogen Online</span></a>
+                       rel="noopener noreferrer nofollow">
+                        <i class="bi bi-youtube align-middle"
+                           style="font-size: 1.5rem;"></i>
+                        <span class="ml-1"
+                              i18n>How to - Fragebogen Online</span>
+                    </a>
                 </div>
                 <div *ngIf="router.url.includes('/forms/fillout/form/') || router.url.includes('/forms/editor/')"
                      class="col text-right p-1 m-0">
