--- a/power/src/app/static/ogc-services/ogc-services.component.html
+++ b/power/src/app/static/ogc-services/ogc-services.component.html
@@ -161,8 +161,7 @@
             <div class="mb-2"
                  i18n>Die URL endet mit dem gewünschten Jahr für die Daten, ist ein Jahr nicht vorhanden, so ist keine
                 Verbindung möglich. Der älteste Jahrgang des WFS ist 2012. Die WMS-Dienste der Jahrgänge 2000 und 2001
-                enthalten die Bodenrichtwerte in D-Mark, alle anderen in Euro. Dienste vor 2012 sind nicht.
-            </div>
+                enthalten die Bodenrichtwerte in D-Mark, alle anderen in Euro. Dienste vor 2012 sind nicht.</div>
             <div class="servicelist mb-4">
                 <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WFS_boris_2012</div>
             </div>
