--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -377,15 +377,16 @@
                 <div class="lead">
                     <h3 class="h5 text-break"
                         i18n>Immobilien-Preis-Kalkulator</h3>
-                    <p class="text-justify"
-                       i18n="@@immobilienpreiskalkulator_description">Mit Hilfe des Immobilien-Preis-Kalkulators können
-                        Sie schnell und einfach das Preisniveau für Ihr freistehendes Ein-/Zweifamilienhaus, Ihr
-                        Reihenhaus, Ihre Doppelhaushälfte oder Ihre Eigentumswohnung abschätzen. Der
-                        Immobilien-Preis-Kalkulator basiert auf Marktmodellen (Vergleichsfaktoren), die durch die
-                        Gutachterausschüsse für Grundstückswerte aus der Kaufpreissammlung mit Hilfe
-                        mathematisch-statistischer Verfahren (multiple Regression) ermittelt werden. Eine Auskunft auf
-                        Grundlage des Immobilien-Preis-Kalkulators ist
-                        <strong class="font-weight-bold">gebührenpflichtig</strong>.
+                    <p class="text-justify">
+                        <span i18n>Mit Hilfe des Immobilien-Preis-Kalkulators können
+                            Sie schnell und einfach das Preisniveau für Ihr freistehendes Ein-/Zweifamilienhaus, Ihr
+                            Reihenhaus, Ihre Doppelhaushälfte oder Ihre Eigentumswohnung abschätzen. Der
+                            Immobilien-Preis-Kalkulator basiert auf Marktmodellen (Vergleichsfaktoren), die durch die
+                            Gutachterausschüsse für Grundstückswerte aus der Kaufpreissammlung mit Hilfe
+                            mathematisch-statistischer Verfahren (multiple Regression) ermittelt werden. Eine Auskunft
+                            auf Grundlage des Immobilien-Preis-Kalkulators ist</span>&nbsp;<strong
+                                class="font-weight-bold"
+                                i18n>gebührenpflichtig</strong>.
                     </p>
                 </div>
             </div>
