--- a/power/src/app/fragebogen/fragebogen.scss
+++ b/power/src/app/fragebogen/fragebogen.scss
@@ -102,6 +102,15 @@ td {
     }
 }
 
+@media (max-width: 767px) {
+    .text-rotate-90 span {
+        width: auto;
+        writing-mode: vertical-rl;
+        -webkit-writing-mode: vertical-rl;
+        -ms-writing-mode: vertical-rl;
+    }
+}
+
 .sv_custom_header {
     display: none !important;
 }
