NewForm: Escape form title

--- a/power/src/app/fragebogen/dashboard/newform/newform.component.html
+++ b/power/src/app/fragebogen/dashboard/newform/newform.component.html
@@ -6,6 +6,7 @@
         <input type="text"
                class="form-control"
                [(ngModel)]="title"
+               (input)="escapeTitle()"
                [class.is-invalid]="!title"
                id="formtitle"
                name="formtitle"
