Fix ogc services page

--- a/power/src/app/static/ogc-services/ogc-services.component.html
+++ b/power/src/app/static/ogc-services/ogc-services.component.html
@@ -104,7 +104,7 @@
             <div class="h5"
                  i18n>Aktuelles Jahr</div>
             <div class="mb-2"
-                 i18n>Diese Adresse referenziert immer auf das aktuelle Jahr. Für alle WFS-Dienste ist der
+                 i18n>Diese Adresse referenziert immer auf das aktuelle Jahr. Für alle WMS-Dienste ist der
                 GetFeatureInfo Request freigeschaltet.</div>
             <div class="servicelist mb-4">
                 <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WMS_boris</div>
@@ -150,8 +150,7 @@
             <div class="h5"
                  i18n>Aktuelles Jahr</div>
             <div class="mb-2"
-                 i18n>Diese Adresse referenziert immer auf das aktuelle Jahr. Für alle WFS-Dienste ist der
-                GetFeatureInfo Request freigeschaltet.</div>
+                 i18n>Diese Adresse referenziert immer auf das aktuelle Jahr.</div>
             <div class="servicelist mb-4">
                 <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WFS_boris</div>
             </div>
@@ -160,8 +159,7 @@
                  i18n>Jahrgangsdienste</div>
             <div class="mb-2"
                  i18n>Die URL endet mit dem gewünschten Jahr für die Daten, ist ein Jahr nicht vorhanden, so ist keine
-                Verbindung möglich. Der älteste Jahrgang des WFS ist 2012. Die WMS-Dienste der Jahrgänge 2000 und 2001
-                enthalten die Bodenrichtwerte in D-Mark, alle anderen in Euro. Dienste vor 2012 sind nicht.</div>
+                Verbindung möglich. Der älteste Jahrgang des WFS ist 2012.</div>
             <div class="servicelist mb-4">
                 <div>https://www.geobasisdaten.niedersachsen.de/doorman/noauth/WFS_boris_2012</div>
             </div>
