Replaced mapbox-gl JS with maplibre-gl

--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -1,235 +1,10 @@
 <div class="wrapper"
      [class]="isCollapsed ? '' : 'border'">
-    <mgl-map (click)="onMapClickEvent($event)"
-             (moveEnd)="onMoveEnd()"
-             (load)="loadMap($event)"
-             (rotateEnd)="onRotate()"
-             (zoomEnd)="onZoomEnd()"
-             (pitchEnd)="onPitchEnd()"
-             [transformRequest]="transformRequest"
-             [bounds]="bounds"
-             [maxZoom]="18"
-             [minZoom]="5"
-             [style]="MAP_STYLE_URL"
-             [trackResize]="true"
-             id="map">
-        <!-- (touchEnd)="onDragEnd()" -->
-        <!-- (mouseUp)="onDragEnd($event)" -->
+    <div class="map-container"
+         #map></div>
 
-        <mgl-geojson-source id="ndsgeojson"
-                            [data]="baseUrl+'/assets/boden/niedersachsen.geojson'"></mgl-geojson-source>
-        <mgl-geojson-source id="baulandSource"
-                            [data]="baulandData">
-        </mgl-geojson-source>
-
-        <mgl-geojson-source id="landwirtschaftSource"
-                            [data]="landwirtschaftData">
-        </mgl-geojson-source>
-
-        <mgl-layer id="nds"
-                   type="line"
-                   [maxzoom]="11"
-                   [source]="'ndsgeojson'"
-                   [paint]="{
-                        'line-color': '#c4153a',
-                        'line-width': {
-                            'stops': [[8,1],[11,1]]
-                        },
-                        'line-opacity': {
-                            'stops':[[8,1],[11,1]]
-                        }
-                    }">
-        </mgl-layer>
-
-        <!-- Building Extrusion Layer -->
-        <mgl-layer id="building-extrusion"
-                   type="fill-extrusion"
-                   source="openmaptiles"
-                   [minzoom]="15"
-                   sourceLayer="building"
-                   [paint]="{
-                        'fill-extrusion-color': 'rgb(219, 219, 218)',
-                        'fill-extrusion-height': 0,
-                        'fill-extrusion-opacity': 0.7,
-                        'fill-extrusion-height-transition': {
-                            duration: 600,
-                            delay: 0
-                        }
-                    }">
-        </mgl-layer>
-
-        <!-- Niedersachsen -->
-        <mgl-layer id="flurstuecke"
-                   type="line"
-                   [source]="ndsFstSource"
-                   [minzoom]="15"
-                   [sourceLayer]="'ax_flurstueck_nds'"
-                   [paint]="{
-                        'line-color': '#96999e',
-                        'line-width': {
-                            'stops': [[15,0],[16,1],[18,2]]
-                        },
-                        'line-opacity': {
-                            'stops' : [[15,0.5]]
-                        }
-                    }">
-        </mgl-layer>
-
-        <mgl-layer id="bauland"
-                   type="line"
-                   [source]="ndsSource"
-                   [minzoom]="11"
-                   [sourceLayer]="'br_brzone_flat_with_display'"
-                   [paint]="{
-                        'line-color': teilmarkt.hexColor,
-                        'line-width': {
-                            'stops': [[11,0],[13,1],[18,2]]
-                        },
-                        'line-opacity': {
-                            'stops' : [[11,0],[13,1]]
-                        }
-                    }"
-                   [layout]="teilmarkt.value.includes('B') ? {visibility: 'visible'} : {visibility: 'none'}"
-                   [filter]="['all',['in', 'entw', 'B', 'SF', 'R', 'E'],['==', 'stag', stichtag]]">
-        </mgl-layer>
-
-        <mgl-layer id="sanierungsgebiet"
-                   type="line"
-                   [source]="ndsVergSource"
-                   [minzoom]="11"
-                   [sourceLayer]="'br_verfahren'"
-                   [paint]="{
-                        'line-color': '#0080FF',
-                        'line-dasharray': [7,5],
-                        'line-width': {
-                            'stops': [[11,0],[13,2],[18,4]]
-                            },
-                            'line-opacity': {
-                                'stops' : [[11,0],[13,.6]]
-                            }
-                    }"
-                   [layout]="teilmarkt.value.includes('B') ? {visibility: 'visible'} : {visibility: 'none'}"
-                   [filter]="['==', 'stag', stichtag]">
-        </mgl-layer>
-
-        <mgl-layer id="landwirtschaft"
-                   type="line"
-                   [source]="ndsSource"
-                   [sourceLayer]="'br_brzone_flat_with_display'"
-                   [minzoom]="10"
-                   [paint]="{
-                        'line-color': teilmarkt.hexColor,
-                        'line-width': {
-                            'stops': [[8,0],[10,1],[11,2]]
-                        },
-                        'line-opacity': {
-                            'stops' : [[8,0],[10,1]]
-                        }
-                    }"
-                   [layout]="teilmarkt.value.includes('LF') ? {visibility: 'visible'} : {visibility: 'none'}"
-                   [filter]="['all',['==', 'entw', 'LF'], ['==','stag',stichtag]]">
-        </mgl-layer>
-
-        <!-- Bremen -->
-        <mgl-layer id="bauland_bremen"
-                   type="line"
-                   [source]="bremenSource"
-                   [minzoom]="11"
-                   [sourceLayer]="'br_brzone_flat_bremen_with_display'"
-                   [paint]="{
-                        'line-color': teilmarkt.hexColor,
-                        'line-width': {
-                            'stops': [[11,0],[13,1],[18,2]]
-                        },
-                        'line-opacity': {
-                            'stops' : [[11,0],[13,1]]
-                        }
-                    }"
-                   [layout]="teilmarkt.value.includes('B') ? {visibility: 'visible'} : {visibility: 'none'}"
-                   [filter]="['all',['in', 'entw', 'B', 'SF', 'R', 'E'],['==', 'stag', stichtag]]">
-        </mgl-layer>
-
-        <mgl-layer id="sanierungsgebiet_bremen"
-                   type="line"
-                   [source]="bremenSource"
-                   [minzoom]="11"
-                   [sourceLayer]="'br_brzone_flat_bremen_with_display'"
-                   [paint]="{
-                        'line-color': '#0080FF',
-                        'line-dasharray': [7,5],
-                        'line-width': {
-                            'stops': [[11,0],[13,2],[18,4]]
-                            },
-                            'line-opacity': {
-                                'stops' : [[11,0],[13,.6]]
-                            }
-                    }"
-                   [layout]="teilmarkt.value.includes('B') ? {visibility: 'visible'} : {visibility: 'none'}"
-                   [filter]="['all',['in', 'verg', 'San', 'SoSt', 'Entw', 'StUb'],['==', 'stag', stichtag]]">
-        </mgl-layer>
-
-        <mgl-layer id="landwirtschaft_bremen"
-                   type="line"
-                   [source]="bremenSource"
-                   [sourceLayer]="'br_brzone_flat_bremen_with_display'"
-                   [minzoom]="10"
-                   [paint]="{
-                        'line-color': teilmarkt.hexColor,
-                        'line-width': {
-                            'stops': [[8,0],[10,1],[11,2]]
-                        },
-                        'line-opacity': {
-                            'stops' : [[8,0],[10,1]]
-                        }
-                    }"
-                   [layout]="teilmarkt.value.includes('LF') ? {visibility: 'visible'} : {visibility: 'none'}"
-                   [filter]="['all',['==', 'entw', 'LF'], ['==','stag',stichtag]]">
-        </mgl-layer>
-
-        <!-- Labels -->
-
-        <mgl-layer id="bauland_labels"
-                   type="symbol"
-                   source="baulandSource"
-                   [paint]="{
-                        'text-halo-color': '#fff',
-                        'text-halo-width': 2,
-                        'text-halo-blur': 2,
-                        'text-color': teilmarkt.hexColor
-                    }"
-                   [layout]="{
-                        'visibility': 'visible',
-                        'text-field': ['get', 'display'],
-                        'text-max-width': 0,
-                        'text-size': {
-                            'stops': [[12, 10], [15, 16]]
-                        },
-                        'text-font': ['Cantarell Regular']
-                   }">
-        </mgl-layer>
-
-        <mgl-layer id="landwirtschaft_labels"
-                   type="symbol"
-                   source="landwirtschaftSource"
-                   [paint]="{
-                        'text-halo-color': '#fff',
-                        'text-halo-width': 2,
-                        'text-halo-blur': 2,
-                        'text-color': teilmarkt.hexColor
-                    }"
-                   [layout]="{
-                        'visibility': 'visible',
-                        'text-field': ['get', 'display'],
-                        'text-max-width': 0,
-                        'text-size': {
-                            'stops': [[10, 20], [15, 24]]
-                        },
-                        'text-font': ['Cantarell Regular']
-                    }">
-        </mgl-layer>
-
-        <mgl-control [position]="'bottom-left'"
+    <!--<mgl-control [position]="'bottom-left'"
                      mglScale
                      unit="metric"></mgl-control>
-    </mgl-map>
+    </mgl-map>-->
 </div>
