--- a/power/src/app/fragebogen/details/details.component.html
+++ b/power/src/app/fragebogen/details/details.component.html
@@ -731,7 +731,10 @@
                                 previousText="&lsaquo;"
                                 nextText="&rsaquo;"
                                 firstText="&laquo;"
-                                lastText="&raquo;">
+                                lastText="&raquo;"
+                                role="navigation"
+                                aria-label="Antworten"
+                                i18n-aria-label>
                     </pagination>
                 </div>
             </div>
