--- a/power/src/app/fragebogen/dashboard/dashboard.component.html
+++ b/power/src/app/fragebogen/dashboard/dashboard.component.html
@@ -389,7 +389,10 @@
                                     previousText="&lsaquo;"
                                     nextText="&rsaquo;"
                                     firstText="&laquo;"
-                                    lastText="&raquo;">
+                                    lastText="&raquo;"
+                                    role="navigation"
+                                    aria-label="Antworten"
+                                    i18n-aria-label>
                         </pagination>
                     </div>
                     <div class="d-sm-none">
@@ -401,7 +404,10 @@
                                     previousText="&lsaquo;"
                                     nextText="&rsaquo;"
                                     firstText="&laquo;"
-                                    lastText="&raquo;">
+                                    lastText="&raquo;"
+                                    role="navigation"
+                                    aria-label="Antworten"
+                                    i18n-aria-label>
                         </pagination>
                     </div>
                 </div>
@@ -434,15 +440,21 @@
             <div class="float-sm-right">
                 <div class="d-inline-block w-50 pr-2 align-top"
                      style="min-width: 100px; max-width: 200px;">
-                    <input class="form-control"
-                           id="form-search"
-                           type="text"
-                           role="search"
-                           i18n-placeholder
-                           placeholder="Suche"
-                           i18n-aria-label
-                           aria-label="Suche"
-                           (change)="formSearch = $event.target.value; updateForms(false)">
+                    <form role="search"
+                          i18n-aria-label
+                          aria-label="Formulare">
+                        <div class="form-group">
+                            <label for="form-search"
+                                   class="sr-only"
+                                   i18n>Formular suchen</label>
+                            <input class="form-control"
+                                   id="form-search"
+                                   type="search"
+                                   i18n-placeholder
+                                   placeholder="Suche"
+                                   (change)="formSearch = $event.target.value; updateForms(false)">
+                        </div>
+                    </form>
                 </div>
                 <div class="d-inline-block w-50"
                      style="min-width: 100px; max-width: 200px;">
@@ -828,7 +840,10 @@
                                     previousText="&lsaquo;"
                                     nextText="&rsaquo;"
                                     firstText="&laquo;"
-                                    lastText="&raquo;">
+                                    lastText="&raquo;"
+                                    role="navigation"
+                                    aria-label="Formulare"
+                                    i18n-aria-label>
                         </pagination>
                     </div>
                     <div class="d-none d-sm-inline">
@@ -841,7 +856,10 @@
                                     previousText="&lsaquo;"
                                     nextText="&rsaquo;"
                                     firstText="&laquo;"
-                                    lastText="&raquo;">
+                                    lastText="&raquo;"
+                                    role="navigation"
+                                    aria-label="Formulare"
+                                    i18n-aria-label>
                         </pagination>
                     </div>
                 </div>
